force-app/main/default/objects/Site__c/fields/Utility_Power_Status__c.field-meta.xml
<CustomField>
    <fullName>Utility_Power_Status__c</fullName>
    <label>Utility Power Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Committed</fullName>
            </value>
            <value>
                <fullName>TBC</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>