force-app/main/default/objects/Site__c/fields/Wastewater_Availability__c.field-meta.xml
<CustomField>
    <fullName>Wastewater_Availability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wastewater Availability</label>
    <type>Checkbox</type>
</CustomField>