force-app/main/default/objects/Site__c/fields/Water_Availability__c.field-meta.xml
<CustomField>
    <fullName>Water_Availability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Water Availability</label>
    <type>Checkbox</type>
</CustomField>