force-app/main/default/objects/Site__c/fields/Water_Type__c.field-meta.xml
<CustomField>
    <fullName>Water_Type__c</fullName>
    <label>Water Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>