force-app/main/default/objects/Site__c/fields/Water_Volume_MGD__c.field-meta.xml
<CustomField>
    <fullName>Water_Volume_MGD__c</fullName>
    <label>Water Volume Available (MGD)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>