force-app/main/default/objects/Site__c/fields/Wetlands_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Wetlands_Commentary__c</fullName>
    <label>Wetlands Commentary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>