force-app/main/default/objects/Site__c/fields/Wetlands_Impacted_Acres__c.field-meta.xml
<CustomField>
    <fullName>Wetlands_Impacted_Acres__c</fullName>
    <label>Wetlands Impacted Acres</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>