force-app/main/default/objects/Site__c/fields/YoC_Pct__c.field-meta.xml
<CustomField>
    <fullName>YoC_Pct__c</fullName>
    <label>YoC %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>