force-app/main/default/objects/Site__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Country_Manager__c</columns>
    <columns>Capacity_Manager__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>